--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                                     <div class="card-buttons">
                                         <a class="waves-effect waves-light btn-flat"
                                            target="_blank"
-                                           href="https://www.fiverr.com/jahirfiquitiva/create-unique-material-design-product-iconography">
+                                           href="https://jahir.dev/donate">
                                             Buy service
                                         </a>
                                     </div>
@@ -580,7 +580,7 @@
                                     <div class="card-buttons">
                                         <a class="waves-effect waves-light btn-flat"
                                            target="_blank"
-                                           href="https://www.fiverr.com/jahirfiquitiva/create-an-illustration-for-you">
+                                           href="https://jahir.dev/donate">
                                             Buy service
                                         </a>
                                     </div>
@@ -602,7 +602,7 @@
                                     <div class="card-buttons">
                                         <a class="waves-effect waves-light btn-flat"
                                            target="_blank"
-                                           href="https://www.fiverr.com/jahirfiquitiva/translate-your-project-to-spanish-8b313263-8c12-4e69-897f-39b870e05c82">
+                                           href="https://jahir.dev/donate">
                                             Buy service
                                         </a>
                                     </div>
@@ -1129,12 +1129,12 @@
         <script type="text/javascript">
             $('#message').trigger('autoresize');
             $('.button-collapse').sideNav({
-                                              menuWidth: 280, // Default is 300
-                                              edge: 'left', // Choose the horizontal origin
-                                              closeOnClick: true,
-                                              // Closes side-nav on <a> clicks, useful for Angular/Meteor
-                                              draggable: true // Choose whether you can drag to open on touch screens
-                                          }
+                  menuWidth: 280, // Default is 300
+                  edge: 'left', // Choose the horizontal origin
+                  closeOnClick: true,
+                  // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                  draggable: true // Choose whether you can drag to open on touch screens
+              }
             );
             $(window).on('load', function () {
                 if (hasScrolledIntoHome()) {
