Update websites content

--- a/error-alt.html
+++ b/error-alt.html
@@ -113,7 +113,7 @@
 
         <footer class="copyright">
             <div class="social-icons">
-                <a target="_blank" href="https://www.linkedin.com/in/jahir-fiquitiva-co"
+                <a target="_blank" href="https://www.linkedin.com/in/jahirfiquitiva"
                    class="linkedin">
                     <i class="mdi mdi-linkedin mdi-24px"></i>
                 </a>
