--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <p class="secondary-text content">
                     My name is Jahir Fiquitiva, I was born on January 28<sup>th</sup>, 1997.<br>
-                    I'm a 20-year-old passionate and creative Android and Front-End Web developer.
+                    I'm a passionate and creative Android and Front-End Web developer.
                     Born
                     and raised in Duitama, <a href="https://www.youtube.com/watch?v=rTsPaAIJdnw"
                                               target="_blank">Colombia</a><br>
@@ -156,9 +156,7 @@
                 <p class="secondary-text content">
                     I am currently studying <b>Systems and Computing Engineering</b>
                     <em>(an equivalent to Computer Science)</em> at
-                    <b>Pedagogical and Technological University of Colombia</b> and I am the
-                    <b>Lead Android Developer</b> at <a href="https://vez.io/" target="_blank">Vezio,
-                                                                                               Inc.</a>
+                    <b>Pedagogical and Technological University of Colombia</b>
                 </p>
                 <p class="secondary-text content">
                     I consider myself a inquisitive person, always trying to learn new skills or
@@ -262,7 +260,7 @@
                             <p>A Material Design dashboard for creating Android icon packs
                                easily.</p>
                             <a class="button" target="_blank"
-                               href="https://github.com/jahirfiquitiva/IconShowcase-Dashboard/">View</a>
+                               href="https://github.com/jahirfiquitiva/Blueprint/">View</a>
                         </div>
                     </div>
                     <div class="column column-top portfolio app">
@@ -271,7 +269,7 @@
                             <h4 class="title">Frames</h4>
                             <p>A Material Design dashboard for creating Android wallpapers apps
                                easily.</p>
-                            <a class="button" target="_blank" href="http://j.mp/FramesGH">View</a>
+                            <a class="button" target="_blank" href="https://github.com/jahirfiquitiva/Frames/">View</a>
                         </div>
                     </div>
                     <div class="column column-top portfolio app">
@@ -279,8 +277,7 @@
                             <img src="assets/img/portfolio/apps/kuper.png">
                             <h4 class="title">Kuper</h4>
                             <p>A Material Design dashboard for Zooper and Kustom widget packs.</p>
-                            <a class="button"
-                               onclick="showSnack('coming-soon')">View</a>
+                            <a class="button" target="_blank" href="https://github.com/jahirfiquitiva/Kuper/">View</a>
                         </div>
                     </div>
 
@@ -300,7 +297,7 @@
                             <h4 class="title">Tap for Keep</h4>
                             <p>A Floating Action Button for quickly creating notes in Google Keep.</p>
                             <a class="button" target="_blank"
-                               href="https://play.google.com/store/apps/details?id=jahirfiquitiva.apps.queep">View</a>
+                               href="https://play.google.com/store/apps/details?id=com.jahirfiquitiva.tap">View</a>
                         </div>
                     </div>
                     <div class="column column-top portfolio app">
@@ -309,7 +306,7 @@
                             <h4 class="title">Tap for Todoist</h4>
                             <p>A Floating Action Button for quickly creating tasks in Todoist.</p>
                             <a class="button" target="_blank"
-                               href="https://play.google.com/store/apps/details?id=jahirfiquitiva.apps.tap">View</a>
+                               href="https://play.google.com/store/apps/details?id=com.jahirfiquitiva.tap">View</a>
                         </div>
                     </div>
 
@@ -414,7 +411,7 @@
                         <a href="http://www.ssabatinephotography.com/" target="_blank">
                             <div class="sup-card">
                                 <img class="avatar small"
-                                     src="https://pbs.twimg.com/profile_images/853258651326459904/yogDkP9p.jpg">
+                                     src="https://s3-img.pixpa.com/com/large/37571/newdo-2-pw69wd.jpg">
                                 <h5 class="secondary-text supporter">Sherry Sabatine</h5>
                             </div>
                         </a>
@@ -468,7 +465,7 @@
                         <a href="https://plus.google.com/+EduardoPratti" target="_blank">
                             <div class="sup-card">
                                 <img class="avatar small"
-                                     src="https://lh3.googleusercontent.com/JBUU8dTBxuqSp3mwG87DmNWzYW1zsOlUXiJRRXgCdbajedZx8R8_TjgOdM6-3imZGt5JXL1dBdH6wL0=w1107-h523-rw-no">
+                                     src="https://pbs.twimg.com/profile_images/560688750247051264/seXz0Y25_400x400.jpeg">
                                 <h5 class="secondary-text supporter">Eduardo Pratti</h5>
                             </div>
                         </a>
@@ -587,10 +584,10 @@
                             <h4 class="primary-text">More Contact Info:</h4>
                             <h5 class="secondary-text">Jahir Fiquitiva</h5>
                             <h5 class="secondary-text">Duitama, Boyacá, Colombia</h5>
-                            <h6 class="secondary-text">+57 322 431 03 55</h6>
+                            <h6 class="secondary-text">+57 431 3242 32424 2</h6>
                             <h6>
                                 <a href="mailto:hi@jahirfiquitiva.me" target="_blank"
-                                   class="secondary-text">hi@jahirfiquitiva.me</a>
+                                   class="secondary-text">hola@jahir.dev</a>
                             </h6>
                         </div>
                     </div>
@@ -606,7 +603,7 @@
 
         <footer class="copyright">
             <div class="social-icons">
-                <a target="_blank" href="https://www.linkedin.com/in/jahir-fiquitiva-co"
+                <a target="_blank" href="https://www.linkedin.com/in/jahirfiquitiva"
                    class="linkedin">
                     <i class="mdi mdi-linkedin mdi-24px"></i>
                 </a>
@@ -645,7 +642,7 @@
                 <i class="mdi mdi-coffee mdi-18px"></i> by
                 <a href="#"><b>Jahir Fiquitiva</b></a> © 2017
                 <br><i class="mdi mdi-brush mdi-18px"></i> by
-                <a href="https://plus.google.com/+LumiqCreative"><b>Lumiq Creative</b></a>
+                <a href="https://lumiqcreative.com/"><b>Lumiq Creative</b></a>
             </p>
         </footer>
 
