--- a/error.html
+++ b/error.html
@@ -116,7 +116,7 @@
 
         <footer class="copyright">
             <div class="social-icons">
-                <a target="_blank" href="https://www.linkedin.com/in/jahir-fiquitiva-co"
+                <a target="_blank" href="https://www.linkedin.com/in/jahirfiquitiva"
                    class="linkedin">
                     <i class="mdi mdi-linkedin mdi-24px"></i>
                 </a>
