--- a/support.html
+++ b/support.html
@@ -1,94 +1,7 @@
 <!DOCTYPE html>
-<!--
-  ~ Copyright (c) 2017. Jahir Fiquitiva. Graphic Design and Android Development Enthusiast. All rights reserved.
-  -->
-
-<html lang="en" itemscope itemtype="http://schema.org/Article">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-        <!--[if IE]>
-        <meta http-equiv="cleartype" content="on"/><![endif]-->
-
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-
-        <title>Jahir Fiquitiva's Portfolio</title>
-        <meta name="description"
-              content="A website to show information about me, my skills and my portfolio">
-        <meta name="author" content="Jahir Fiquitiva">
-        <meta name="keywords"
-              content="portfolio, skills, developer, development, android, material, material design, kotlin, java, javascript, css, html, python, c, c++, design, iconography, illustration">
-
-        <meta property="og:title" content="Jahir Fiquitiva's Portfolio"/>
-        <meta property="og:site_name" content="Jahir Fiquitiva's Portfolio"/>
-
-        <!-- Schema.org markup for Google+ -->
-        <meta itemprop="name" content="Jahir Fiquitiva's Portfolio">
-        <meta itemprop="description"
-              content="A website to show information about me, my skills and my portfolio">
-        <meta itemprop="image"
-              content="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/logo-full-sm.png">
-
-        <!-- Open Graph data -->
-        <meta property="og:title" content="Jahir Fiquitiva's Portfolio"/>
-        <meta property="og:type" content="portfolio"/>
-        <meta property="og:url" content="https://www.jahirfiquitiva.me/"/>
-        <meta property="og:image"
-              content="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/logo-full-sm.png"/>
-        <meta property="og:description"
-              content="A website to show information about me, my skills and my portfolio"/>
-        <meta property="og:site_name" content="Jahir Fiquitiva's Portfolio"/>
-        <meta property="og:locale" content="en_US"/>
-        <link rel="canonical" href="https://www.jahirfiquitiva.me/"/>
-
-        <!-- Twitter -->
-        <!-- Twitter Card data -->
-        <meta name="twitter:card"
-              content="A website to show information about me, my skills and my portfolio">
-        <meta name="twitter:site" content="@jahirfiquitiva">
-        <meta name="twitter:title" content="Jahir Fiquitiva's Portfolio">
-        <meta name="twitter:description"
-              content="A website to show information about me, my skills and my portfolio">
-        <meta name="twitter:creator" content="@jahirfiquitiva">
-        <!-- Twitter summary card with large image must be at least 280x150px -->
-        <meta name="twitter:image:src"
-              content="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/logo-full-sm.png">
-
-        <!-- Google Verification -->
-        <link href="https://plus.google.com/+JahirFiquitivaR/" rel="publisher"/>
-        <meta name="google-site-verification"
-              content="lJwL3cKpjX_Eqp6yEY4hsydJazQl85xv29ZUmEg4oEE"/>
-
-        <!-- Favicons -->
-        <meta name="theme-color" content="#2196f3">
-        <meta name="msapplication-TileColor" content="#2196f3">
-        <link rel="shortcut icon"
-              href="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/favicon32.png">
-        <link rel="apple-touch-icon"
-              href="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/favicon57.png">
-        <link rel="apple-touch-icon" sizes="72x72"
-              href="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/favicon72.png">
-        <link rel="apple-touch-icon" sizes="114x114"
-              href="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/favicon114.png">
-        <link rel="apple-touch-icon-precomposed"
-              href="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/favicon32.png">
-        <link rel="icon"
-              href="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/favicon32.png"
-              sizes="32x32">
-        <meta name="msapplication-TileImage"
-              content="https://github.com/jahirfiquitiva/Website-Resources/raw/master/myself/favicon32.png">
-
-
-        <!-- Redirect -->
-        <meta http-equiv="refresh" content="1; url=https://www.paypal.me/jahirfiquitiva">
-        <script type="text/javascript">
-            window.location.href = "https://www.paypal.me/jahirfiquitiva" // "https://www.patreon.com/JahirFiquitiva" // "https://www.patreon.com/bePatron?u=5261073"
-        </script>
-    </head>
-    <body>
-        If you are not redirected automatically, please follow
-        <a href='https://www.paypal.me/jahirfiquitiva'>this link</a>.
-    </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=https://jahir.dev/donate">
+    <script type="text/javascript">window.location.href = 'https://jahir.dev/donate';</script>
+    <title>Redirecting...</title>
+</head>If you are not redirected automatically, please follow this<a href="https://jahir.dev/donate">link</a>.
