--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <a href="#" class="navbar-brand mr-2 primary">Jahir Fiquitiva</a>
             </section>
             <section class="navbar-section">
-                <a target="_blank" href="https://www.linkedin.com/in/jahir-fiquitiva-co"
+                <a target="_blank" href="https://www.linkedin.com/in/jahirfiquitiva"
                    class="btn btn-link"><i
                         class="mdi mdi-24px mdi-linkedin primary"></i></a>
                 <a target="_blank" href="https://twitter.com/jahirfiquitiva" class="btn btn-link"><i
@@ -130,7 +130,7 @@
                 <div id="about" class="centered">
                     <p>
                         My name is Jahir Fiquitiva, I was born on January 28<sup>th</sup>, 1997.<br>
-                        I'm a 20-year-old passionate and creative Android and Front-End Web
+                        I'm a passionate and creative Android and Front-End Web
                         developer.
                         Born
                         and raised in Duitama, <a href="https://www.youtube.com/watch?v=rTsPaAIJdnw"
@@ -160,9 +160,7 @@
                     <p>
                         I am currently studying <b>Systems and Computing Engineering</b>
                         <em>(an equivalent to Computer Science)</em> at
-                        <b>Pedagogical and Technological University of Colombia</b> and I am the
-                        <b>Lead Android Developer</b> at <a href="https://vez.io/" target="_blank">Vezio,
-                                                                                                   Inc.</a>
+                        <b>Pedagogical and Technological University of Colombia</b>.
                     </p>
                     <p>
                         I consider myself a inquisitive person, always trying to learn new skills or
@@ -279,7 +277,7 @@
                                     </div>
                                     <div class="card-footer">
                                         <a target="_blank"
-                                           href="https://github.com/jahirfiquitiva/IconShowcase-Dashboard/">
+                                           href="https://github.com/jahirfiquitiva/Blueprint/">
                                             <button class="btn btn-primary float-right">View
                                             </button>
                                         </a>
@@ -370,7 +368,7 @@
                                     </div>
                                     <div class="card-footer">
                                         <a target="_blank"
-                                           href="https://play.google.com/store/apps/details?id=jahirfiquitiva.apps.queep">
+                                           href="https://play.google.com/store/apps/details?id=com.jahirfiquitiva.tap">
                                             <button class="btn btn-primary float-right">View
                                             </button>
                                         </a>
@@ -392,7 +390,7 @@
                                     </div>
                                     <div class="card-footer">
                                         <a target="_blank"
-                                           href="https://play.google.com/store/apps/details?id=jahirfiquitiva.apps.tap">
+                                           href="https://play.google.com/store/apps/details?id=com.jahirfiquitiva.tap">
                                             <button class="btn btn-primary float-right">View
                                             </button>
                                         </a>
