--- a/contacted.html
+++ b/contacted.html
@@ -100,7 +100,7 @@
                 <a href="./" class="navbar-brand mr-2 primary">Jahir Fiquitiva</a>
             </section>
             <section class="navbar-section">
-                <a target="_blank" href="https://www.linkedin.com/in/jahir-fiquitiva-co"
+                <a target="_blank" href="https://www.linkedin.com/in/jahirfiquitiva"
                    class="btn btn-link"><i
                         class="mdi mdi-24px mdi-linkedin primary"></i></a>
                 <a target="_blank" href="https://twitter.com/jahirfiquitiva" class="btn btn-link"><i
